# Progetto_PCS

./: .gitignore
Projects/Delaunay/: CMakeLists.txt  DocumentazioneDelaunay.md  Pseudo_convex_hull_method.txt  README.md  Regressione C.C..ggb  main_program.cpp  main_test.cpp  suggerimenti generali.txt
Projects/Delaunay/Dataset/: Edges_export.csv  Points.csv  Points_prova.csv  Test2.csv
Projects/Delaunay/Presentazione/: Presentazione PCS.pptx
Projects/Delaunay/src/: CMakeLists.txt  empty_class.cpp  empty_class.hpp  versione1annalisa_class.hpp
Projects/Delaunay/test/: CMakeLists.txt  test_empty.hpp
